i965/gen4-6: Take texture formats from the intelObj instead of the miptree

While we don't support on GEN <= 6, we still need proper texture format
faking for the meta implementation of ARB_copy_image to work.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=83036