src/mesa/drivers/dri/i965/brw_wm_surface_state.c
@@ -329,7 +329,8 @@ brw_update_texture_surface(struct gl_context *ctx,
    surf = brw_state_batch(brw, AUB_TRACE_SURFACE_STATE,
 			  6 * 4, 32, surf_offset);
 
-   uint32_t tex_format = translate_tex_format(brw, mt->format,
+   uint32_t tex_format = translate_tex_format(brw,
+                                              intelObj->_Format,
                                               sampler->sRGBDecode);
 
    if (for_gather) {
